Fix issue 03976: Layout problem at Multiple short text Dev Vertically aligned the label to middle - improved layout in Firefox with multiple row textareas
git-svn-id: file:///Users/Shitiz/Downloads/lssvn/source/limesurvey@8157 b72ed6b6-b9f8-46b5-92b4-906544132732

--- a/templates/bluengrey/template.css
+++ b/templates/bluengrey/template.css
@@ -708,7 +708,7 @@ ul.cols-8-ul label {
 .multiple-short-txt ul li label {
 	padding: 0.3em 1em 0% 0%;
 	display: table-cell;
-	vertical-align: top;
+	vertical-align: middle;
 }
 
 .numeric-multi ul.computed li label
